# ai-email-security-system-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train_model.py
server/: app.py  environment.py  grader.py  model.pkl
