[project]
name = "ai-email-security-system"
version = "0.1.0"
description = "AI Email Spam Detection OpenEnv Project"
authors = [
    {name = "Spandan Satapute"}
]

dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "scikit-learn==1.4.1.post1",
    "pydantic==2.6.4",
    "requests==2.31.0"
]

[project.scripts]
server = "server.app:main"